traces/bug_693.txt
examples++-load/medit.cpp:1088: error: DEAD_STORE
  The value written to &nttmp (type int) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1088:5: Write of unused value
1086.     for(size_t i=0; i<l.size();i=i+offset){
1087.       int nvtmp  = iv;
1088.       int nttmp  = it;
            ^
1089.       int nbetmp = ibe;
1090.         
